--- a/database/22209/style.css
+++ b/database/22209/style.css
@@ -42,7 +42,7 @@ main {
 .portrait {
     width: 100%;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .portrait img {
@@ -51,15 +51,14 @@ main {
     display: block;
 }
 
-h2 {
-    font-size: 18px;
+.small-space {
     margin-bottom: 5px;
 }
 
 .subname {
     text-align: center;
     font-size: 14px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
 .id-number, .info {
