--- a/database/22209/style.css
+++ b/database/22209/style.css
@@ -42,7 +42,7 @@ main {
 .portrait {
     width: 100%;
     text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .portrait img {
@@ -51,14 +51,14 @@ main {
     display: block;
 }
 
-.small-space {
+.研修 {
+    text-align: center;
+    font-size: 14px;
     margin-bottom: 5px;
 }
 
-.subname {
-    text-align: center;
-    font-size: 14px;
-    margin-bottom: 8px;
+.spacer {
+    height: 5px;
 }
 
 .id-number, .info {
